--- a/resources/pages/user/user_edit.html
+++ b/resources/pages/user/user_edit.html
@@ -22,7 +22,8 @@
                 </div>
             <div class="form-group"  style="display:none;">
                 <label id="lbl_newPsw">密码</label>
-                <input class="form-control" id="password1" autocomplete="off" onfocus="this.type='password'">
+                <input type="password" autocomplete="off" hidden>
+                <input class="form-control" id="password1" type="password" autocomplete="off" onfocus="this.type='password'">
             </div>
             <div class="form-group">
                 <label id="lbl_rePsw">确认密码</label>
