--- a/resources/pages/user/roles_edit.html
+++ b/resources/pages/user/roles_edit.html
@@ -9,12 +9,10 @@
         <div class="form-group" style="overflow:auto;">
             <label id="lbl_role">角色名称：</label>
             <input type="text" class="form-control" id="role_name" style="width:100%;">
-
-            <label id="lbl_termPermission" style="margin-top:20px;">终端权限：</label>
-
-            <div class="form-group" style="margin-top:20px;">
+            <label id="lbl_termPermission" style="margin-top:15px;">终端权限：</label>
+            <button id="term_list" type="button" class="btn btn-primary">选择</button>
+            <div class="form-group" style="margin-top:10px;">
                 <textarea id="term" disabled="disabled" style="width:100%; height:150px; resize:none;"></textarea>
-                <button id="term_list" type="button" class="btn btn-primary" style=" position:absolute;margin-left:90px;margin-top:-205px;">选择</button>
             </div>
             <label id="lbl_funcPermission">功能权限：</label>
             <div class="form-group">
