--- a/resources/pages/terminal/list.html
+++ b/resources/pages/terminal/list.html
@@ -12,7 +12,7 @@
       <!-- <div class="box box-solid sidebar"> -->
       <div class="box box-primary tree-box" style="">
         <div class="box-header with-border">
-          <h3 class="box-title" style="position: relative; top: 2px;">终端分类</h3>
+          <h3 class="termTree-title box-title" style="position: relative; top: 2px;"></h3>
           <div class="tools">
             <a id="tct_edit" class="btn btn-default btn-xs" title="编辑"><i class="glyphicon glyphicon-edit" style="font-size:12px;"></i></a>
             <a id="tct_delete" class="btn btn-default btn-xs" title="删除"><i class="glyphicon glyphicon-trash" style="font-size:12px;"></i></a>
