--- a/resources/pages/terminal/configTermClass.html
+++ b/resources/pages/terminal/configTermClass.html
@@ -19,7 +19,7 @@
           </div>
           <form class="form-horizontal">
               <div class="form-group">
-                <label class="col-sm-3 control-label">当前频道</label>
+                <label class="col-sm-3 control-label lbl-currentCha">当前频道</label>
                 <div class="col-sm-9">
                   <div class="checkbox">
                       <label id="CC-Channel" style="padding-left: 0; cursor: default;"></label>
