--- a/index.html
+++ b/index.html
@@ -134,10 +134,30 @@
             </ul>
         </section>
 
-        <section class="sidebar">
-            <ul class="sidebar-menu">
-            </ul>
-        </section>
+        <!-- language -->
+        <!--<ul class="language-box">-->
+            <!--<li class="dropup flag-menu">-->
+                <!--<a class="dropdown-toggle" data-toggle="dropdown">-->
+                    <!--<img id="langImage" src="" class="flag-image">-->
+                    <!--<span id="languageName" class="hidden-xs"></span>-->
+                    <!--<i class="glyphicon glyphicon-triangle-top" style="font-size: 12px; transform: translateY(2px) scale(0.9); margin-left: 4px;"></i>-->
+                <!--</a>-->
+                <!--<ul class="dropdown-menu index-lang-select" style="width: 180px">-->
+                    <!--&lt;!&ndash; User image &ndash;&gt;-->
+                    <!--<li class="lang-national">-->
+                        <!--<a class="index-lang-option" lang="zh-CN"><img src="resources/img/national_flag/china.png">中文(简体)</a>-->
+                    <!--</li>-->
+                    <!--<li class="lang-national">-->
+                        <!--<a class="index-lang-option" lang="en-US"><img src="resources/img/national_flag/usa.png">English(US)</a>-->
+                    <!--</li>-->
+                <!--</ul>-->
+            <!--</li>-->
+        <!--</ul>-->
+
+        <!--<section class="sidebar">-->
+            <!--<ul class="sidebar-menu">-->
+            <!--</ul>-->
+        <!--</section>-->
         <!-- /.sidebar -->
     </aside>
 
