--- a/login.html
+++ b/login.html
@@ -1,6 +1,5 @@
 <!--<%@page contentType="text/html" pageEncoding="UTF-8"%>-->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<!--<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c"%>-->
 <html>
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -16,8 +15,8 @@
     <script type='text/javascript' src="resources/js/pages/login.js"></script>
 
 </head>
-<body class="hold-transition login-page">
-<img id="bg_img" src="resources/img/background.jpg" alt="">
+<body class="hold-transition login-page bgsCover">
+<!--<img id="bg_img" src="resources/img/background.jpg" alt="">-->
 <div class="login-box">
     <div class="login-logo">
         <a style="color: white"><b>CLEAR</b>&nbsp;信息发布系统</a>
