--- a/resources/pages/channel/mtrCtrl.html
+++ b/resources/pages/channel/mtrCtrl.html
@@ -21,7 +21,7 @@
                 <div id="box_text_time" class="input-group">
                     <span class="input-group-addon flipInterval">翻页间隔</span>
                     <input id="mtrC_pageDownPeriod" type="number" class="form-control" min="0" placeholder="请输入">
-                    <span class="input-group-addon second">秒</span>
+                    <span class="input-group-addon second">s</span>
                 </div>
             </div>
             <div id="mtrC_effect" class="pull-right">
@@ -78,7 +78,7 @@
                 <div id="box_weather_time" class="input-group pull-right">
                     <span class="input-group-addon switchingInterval">切换间隔</span>
                     <input id="weatherFlip_time" type="number" class="form-control" min="0" placeholder="请输入">
-                    <span class="input-group-addon second">秒</span>
+                    <span class="input-group-addon second">s</span>
                 </div>
             </div>
         </div>
@@ -99,7 +99,7 @@
                 <div id="box_text_time" class="input-group">
                     <span class="input-group-addon switchingInterval">切换间隔</span>
                     <input id="mtrC_office_switchPeriod" type="number" class="form-control" min="0" placeholder="请输入">
-                    <span class="input-group-addon">秒</span>
+                    <span class="input-group-addon">s</span>
                 </div>
             </div>
         </div>
