--- a/index.html
+++ b/index.html
@@ -218,6 +218,8 @@
 <script src="resources/plugins/bootstrap-slider/bootstrap-slider.js"></script>
 <!-- Bootstrap switch -->
 <script src="resources/plugins/bootstrap-switch/bootstrap-switch.min.js"></script>
+<!-- jQuery Knob Chart -->
+<script src="resources/plugins/knob/jquery.knob.js"></script>
 <!-- Select 2 -->
 <script src="resources/js/bower_components/select2/dist/js/select2.full.js"></script>
 <!-- jQuery.Marquee -->
@@ -234,6 +236,10 @@
 <script src="resources/js/common/date.format.js"></script>
 <!-- html2canvas -->
 <script src="resources/plugins/html2canvas/html2canvas.js"></script>
+
+<!-- high Charts -->
+<script src="resources/plugins/highstock/highstock.js"></script>
+<script src="resources/plugins/highstock/exporting.js"></script>
 
 <script>
     seajs.config({
