--- a/login.html
+++ b/login.html
@@ -14,6 +14,7 @@
     <script type='text/javascript' src="resources/plugins/jQuery/jQuery-2.2.0.min.js"></script>
     <script type='text/javascript' src="resources/js/config.js"></script>
     <script type='text/javascript' src="resources/js/pages/login.js"></script>
+    <script type='text/javascript' src="resources/js/common/MD5.js"></script>
 
 </head>
 <body class="hold-transition login-page bgsCover">
