--- a/resources/pages/channel/mtrCtrl.html
+++ b/resources/pages/channel/mtrCtrl.html
@@ -7,13 +7,12 @@
     </div>
     <!-- /.box-header -->
     <!-- form start -->
-    <form role="form" style="height: 90%;">
+    <form role="form" style="height: calc(100% - 54px);">
         <!-- 文本控件属性 -->
         <div id="box_effect" class="box-header with-border">
             <div>
                 <div class="btn-group mtrCtrl_selectText form-group" style="padding: 0px">
-                    <select id="mtrC_textType" class="form-control select2 "
-                            style="width: 100%; height: 30px; padding: 0px 10px;">
+                    <select id="mtrC_textType" class="form-control select2 mtr-select2">
                         <option selected="selected" value="Normal">常规</option>
                         <option value="Marquee">走马灯</option>
                         <option value="WebURL">在线网页</option>
@@ -36,13 +35,12 @@
                             </div>
                         </div>
                         <div class="btn-group mtrCtrl_selectText">
-                            <select id="mtrC_scrollDirection" class="form-control select2 ">
+                            <select id="mtrC_scrollDirection" class="form-control select2 mtr-select2">
                                 <option selected="selected" value="Right_2_Left">从右到左</option>
                             </select>
                         </div>
                         <div class="btn-group mtrCtrl_selectText">
-                            <select id="mtrC_scrollSpeed" class="form-control select2 "
-                                    style="width: 100%; height: 30px; padding: 0px 10px;">
+                            <select id="mtrC_scrollSpeed" class="form-control select2 mtr-select2" style="width: 100%; height: 30px; padding: 0px 10px;">
                                 <option selected="selected" value=0>静止</option>
                                 <option value=1>1</option>
                                 <option value=2>2</option>
@@ -59,15 +57,11 @@
                     </div>
                     <div class="form-group">
                         <div class="btn-group mtrCtrl_selectText">
-                            <select id="mtrC_fontFamily" class="form-control select2 ">
+                            <select id="mtrC_fontFamily" class="form-control select2 mtr-select2">
                             </select>
                         </div>
                         <div class="btn-group mtrCtrl_selectText">
-                            <select id="mtrC_fontBold" class="form-control select2 ">
-                            </select>
-                        </div>
-                        <div class="btn-group mtrCtrl_selectText">
-                            <select id="mtrC_FontItalic" class="form-control select2 ">
+                            <select id="mtrC_fontStyle" class="form-control select2 mtr-select2">
                             </select>
                         </div>
                     </div>
@@ -110,8 +104,7 @@
         <!-- Office控件属性 -->
         <div id="box_officeEffect" class="box-header with-border">
             <div class="btn-group mtrCtrl_select">
-                <select id="mtrC_office_type" class="form-control select2 "
-                        style="width: 100%; height: 30px; padding: 0px 10px;">
+                <select id="mtrC_office_type" class="form-control select2 mtr-select2">
                     <option selected="selected" value="Normal">常规</option>
                 </select>
             </div>
@@ -153,7 +146,7 @@
             <!-- /.box-tools -->
         </div>
         <div class="mtr_choise table-responsive"
-             style=" margin-top: 10px; height: calc(100% - 150px); border: 1px solid #ddd; border-radius: 3px; width: calc(100% - 10px)">
+             style=" margin-top: 10px; height: calc(100% - 170px); border: 1px solid #ddd; border-radius: 3px; width: calc(100% - 10px)">
             <!-- 资源列表 -->
             <table id="mtrCtrl_Table" class="table table-hover table-striped">
                 <thead></thead>
