走马灯滚动方向

--- a/resources/pages/channel/mtrCtrl.html
+++ b/resources/pages/channel/mtrCtrl.html
@@ -36,11 +36,10 @@
                         </div>
                         <div class="btn-group mtrCtrl_selectText">
                             <select id="mtrC_scrollDirection" class="form-control select2 mtr-select2">
-                                <option selected="selected" value="Right_2_Left">从右到左</option>
                             </select>
                         </div>
                         <div class="btn-group mtrCtrl_selectText">
-                            <select id="mtrC_scrollSpeed" class="form-control select2 mtr-select2" style="width: 100%; height: 30px; padding: 0px 10px;">
+                            <select id="mtrC_scrollSpeed" class="form-control select2 mtr-select2">
                                 <option selected="selected" value=0>静止</option>
                                 <option value=1>1</option>
                                 <option value=2>2</option>
