增加树的逻辑

--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
     <!--<link rel="stylesheet" href="resources/plugins/colorpicker/bootstrap-colorpicker.min.css">-->
     <!-- <script src="resources/js/pages/index_add.js"></script> -->
 
+    <!-- bootstrap colorpickersliders -->
     <link rel="stylesheet" href="resources/plugins/colorpicker/dist/bootstrap.colorpickersliders.min.css">
+    <!-- bootstrap toggle -->
+    <link rel="stylesheet" href="resources/plugins/bootstrap-toggle-master/css/bootstrap-toggle.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -236,6 +239,9 @@
 <script src="resources/js/common/date.format.js"></script>
 <!-- html2canvas -->
 <script src="resources/plugins/html2canvas/html2canvas.js"></script>
+
+<!-- bootstrap toggle -->
+<script src="resources/plugins/bootstrap-toggle-master/js/bootstrap-toggle.js"></script>
 
 <!-- high Charts -->
 <script src="resources/plugins/highstock/highstock.js"></script>
