--- a/resources/pages/terminal/getTermClassAndTerm.html
+++ b/resources/pages/terminal/getTermClassAndTerm.html
@@ -4,8 +4,13 @@
         <button id="term_sel_save" type="button" class="btn btn-primary pull-right" style="margin-right: 10px;">保存</button>
         <h4 id="term_sel_title" class="modal-title"></h4>
     </div>
+    <div class="box-header tree-footer-include">
+        <label class="control-label lbl-include"></label>
+        <input id="tree-include" type="checkbox" checked data-toggle="toggle" data-size="mini">
+        <small class="tips tree-footer-include-tips"></small>
+    </div>
     <div class="col-md-3" style="height:400px; overflow:auto; padding-left:0; padding-right:0;">
-        <div class="form-group">   
+        <div class="form-group">
             <ul id="select-termclass-tree" class="tree-menu">
             </ul>
         </div>
