去掉全选框

--- a/resources/pages/channel/list.html
+++ b/resources/pages/channel/list.html
@@ -20,8 +20,8 @@
 		<!-- /.box-controls -->
 		<div id="channel-list-controls" class="mailbox-controls">
 			<!-- Check all button -->
-			<button type="button" class="btn btn-default btn-sm checkbox-toggle select-all"><i class="fa fa-square-o"></i>
-			</button>
+			<!--<button type="button" class="btn btn-default btn-sm checkbox-toggle select-all"><i class="fa fa-square-o"></i>-->
+			<!--</button>-->
 			<div class="btn-group">
 				<button type="button" class="btn btn-default btn-sm btn-publish">发布</button>
 				<button type="button" class="btn btn-default btn-sm btn-publish-later">预发布</button>
