修改细节符号

--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
                             <!-- <img src="resources/dist/img/user2-160x160.jpg" class="user-image" alt="User Image"> -->
                             <!--下面这个地方替换掉java的模板标签-->
                             <span id="username" class="hidden-xs"></span>
-                            <i class="glyphicon glyphicon-triangle-bottom"
-                               style="font-size: 12px; transform: translateY(2px) scale(0.9); margin-left: 4px;"></i>
+                            <i class="glyphicon glyphicon-triangle-bottom" style="font-size: 12px; transform: translateY(2px) scale(0.9); margin-left: 4px;"></i>
                         </a>
                         <ul class="dropdown-menu">
                             <!-- User image -->
